# moniteo-desktop

./: .gitignore  LICENSE  README.md
delivery/: export.json  imgui.ini  manolab.json  moniteo.json
delivery/test/: test_zebra7500.js
delivery/workspace/config/: config_zebra7500.js
delivery/workspace/modules/: module_zebra7500.js
import/: C4437034033_20220515_liste_EDC_UciId.xls
moniteo-www/: index.html
src/: CMakeLists.txt  ConsoleWindow.cpp  ConsoleWindow.h  CourseWindow.cpp  CourseWindow.h  Gui.cpp  Gui.h  HttpOrder.h  IAppEvent.h  MainWindow.cpp  MainWindow.h  TableWindow.cpp  TableWindow.h  http-client.h  icmp_header.hpp  ipv4_header.hpp  main.cpp  usersdb.cpp  usersdb.h
src/manolab/: IProcessEngine.h  ProcessEngine.cpp  ProcessEngine.h
src/zebrafx7500/: Zebra7500.cpp  Zebra7500.h
www/moniteo-back/: app.ts  couchdb.ts
www/moniteo-front/: package-lock.json  package.json
www/moniteo-front/src/layouts/default/: Layout.vue
www/moniteo-front/src/plugins/: vuetify.ts
www/moniteo-front/src/router/: index.ts
www/moniteo-front/src/views/: Home.vue  Participants.vue  Race.vue
